--- a/share/Makefile.LNX
+++ b/share/Makefile.LNX
@@ -37,7 +37,7 @@ NVPPFLAGS+=-DNDEBUG
 NVCCFLAGS+=-O$(NDEBUG) -Xptxas -v
 else # debug
 NVPPFLAGS+=-UNDEBUG
-NVCCFLAGS+=-O0 -g -G -lineinfo -src-in-ptx -Xptxas -no-bb-merge,-v
+NVCCFLAGS+=-O0 -g -G -src-in-ptx -Xptxas -no-bb-merge,-v
 endif # NDEBUG
 
 ifdef MULTI_GPU
