--- a/hz-gsvd_1/GNUmakefile
+++ b/hz-gsvd_1/GNUmakefile
@@ -9,7 +9,7 @@ GPU_ARCH=sm_30
 endif # !GPU_ARCH
 
 ifndef HDF5
-HDF5=$(HOME)/hdf5
+HDF5=/usr/local
 endif # !HDF5
 
 ifndef CVG
@@ -44,8 +44,8 @@ NVCCFLAGS+=-Xcompiler $(HOST_FLAGS)
 endif # HOST_FLAGS
 
 ifdef ANIMATE
-NVPPFLAGS+=-DANIMATE=$(ANIMATE) -DVN_INTEGER_KIND=8 -I../../../CSD/vn -I${MKLROOT}/include/intel64/ilp64 -I${MKLROOT}/include
-NVLDFLAGS+=-L../../../CSD -lvn -L${MKLROOT}/lib -Xlinker -rpath,${MKLROOT}/lib -L${MKLROOT}/../compiler/lib -Xlinker -rpath,${MKLROOT}/../compiler/lib -lmkl_intel_ilp64 -lmkl_core -lmkl_intel_thread -liomp5 -lpthread
+NVPPFLAGS+=-DANIMATE=$(ANIMATE) -DVN_INTEGER_KIND=8 -I../../../GitHub/JACSD/vn -I${MKLROOT}/include/intel64/ilp64 -I${MKLROOT}/include
+NVLDFLAGS+=-L../../../GitHub/JACSD -lvn -L${MKLROOT}/lib -Xlinker -rpath,${MKLROOT}/lib -L${MKLROOT}/../compiler/lib -Xlinker -rpath,${MKLROOT}/../compiler/lib -lmkl_intel_ilp64 -lmkl_core -lmkl_intel_thread -liomp5 -lpthread
 else # !ANIMATE
 NVPPFLAGS+=-UANIMATE
 endif # ANIMATE
