--- a/share/Makefile.PWR
+++ b/share/Makefile.PWR
@@ -29,15 +29,15 @@ THR=-pthread
 endif # gnu_thread
 
 NVPPFLAGS=-I. -I../share $(HDF5_I) -DUSE_RSQRT #-DUSE_DRMAC
-NVCCFLAGS=-std c++14 -arch $(GPU_ARCH) -cudart shared -restrict -Xcompiler $(THR)
+NVCCFLAGS=-std c++14 -arch $(GPU_ARCH) -restrict -res-usage -Xcompiler $(THR)
 NVLDFLAGS=$(HDF5_L) $(HDF5_l)
 
 ifdef NDEBUG
 NVPPFLAGS+=-DNDEBUG
-NVCCFLAGS+=-O$(NDEBUG) -Xptxas -v
+NVCCFLAGS+=-O$(NDEBUG)
 else # debug
 NVPPFLAGS+=-UNDEBUG
-NVCCFLAGS+=-O0 -g -G -src-in-ptx -Xptxas -no-bb-merge,-v
+NVCCFLAGS+=-O0 -g -G -src-in-ptx -Xptxas -no-bb-merge,-ret-end
 endif # NDEBUG
 
 ifdef MULTI_GPU
