--- a/share/Makefile.WIN
+++ b/share/Makefile.WIN
@@ -27,15 +27,15 @@ HDF5_L=-L$(HDF5)\lib
 HDF5_l=-l libhdf5_hl,libhdf5
 
 NVPPFLAGS=-I. -I..\share $(HDF5_I) -DUSE_RSQRT #-DUSE_DRMAC
-NVCCFLAGS=--cl-version $(MSVC_VERSION) -std c++14 -arch $(GPU_ARCH) -cudart shared -restrict -Xcompiler /EHsc,/favor:INTEL64,/fp:precise,/GF,/GR,/GS-,/GT,/MD
+NVCCFLAGS=--cl-version $(MSVC_VERSION) -std c++14 -arch $(GPU_ARCH) -restrict -res-usage -Xcompiler /EHsc,/favor:INTEL64,/fp:precise,/GF,/GR,/GS-,/GT,/MD
 NVLDFLAGS=$(HDF5_L) $(HDF5_l)
 
 !IFDEF NDEBUG
 NVPPFLAGS=$(NVPPFLAGS) -DNDEBUG
-NVCCFLAGS=$(NVCCFLAGS) -O$(NDEBUG) -Xptxas -v
+NVCCFLAGS=$(NVCCFLAGS) -O$(NDEBUG)
 !ELSE # debug
 NVPPFLAGS=$(NVPPFLAGS) -UNDEBUG
-NVCCFLAGS=$(NVCCFLAGS) -O0 -g -G -src-in-ptx -Xptxas -no-bb-merge,-v
+NVCCFLAGS=$(NVCCFLAGS) -O0 -g -G -src-in-ptx -Xptxas -no-bb-merge,-ret-end
 !ENDIF # NDEBUG
 
 !IFDEF CUBLAS
