--- a/share/Makefile.PWR
+++ b/share/Makefile.PWR
@@ -7,12 +7,16 @@ NVCC=nvcc -ccbin `which xlC_r`
 endif # !NVCC
 
 ifndef GPU_ARCH
-GPU_ARCH=sm_60
+GPU_ARCH=60
 endif # !GPU_ARCH
 
 ifndef CUBLAS
 CUBLAS=2
 endif # !CUBLAS
+
+ifndef STD
+STD=11
+endif # !STD
 
 ifndef HDF5
 HDF5=$(HOME)/hdf5
@@ -29,7 +33,7 @@ THR=-pthread
 endif # gnu_thread
 
 NVPPFLAGS=-I. -I../share $(HDF5_I) -DUSE_RSQRT #-DUSE_DRMAC
-NVCCFLAGS=-std c++14 -arch $(GPU_ARCH) -restrict -res-usage -Xcompiler $(THR)
+NVCCFLAGS=-std c++$(STD) -arch sm_$(GPU_ARCH) -restrict -res-usage -Xcompiler $(THR)
 NVLDFLAGS=$(HDF5_L) $(HDF5_l)
 
 ifdef NDEBUG
