--- a/share/Makefile.WIN
+++ b/share/Makefile.WIN
@@ -18,6 +18,12 @@ GPU_ARCH=30
 STD=11
 !ENDIF # !STD
 
+!IFDEF NDEBUG
+DEBUG=
+!ELSE # DEBUG
+DEBUG=d
+!ENDIF # ?NDEBUG
+
 !IFNDEF HDF5
 HDF5=C:\HDF5
 !ENDIF # !HDF5
@@ -27,14 +33,13 @@ HDF5_L=-L$(HDF5)\lib
 HDF5_l=-l libhdf5_hl,libhdf5
 
 NVPPFLAGS=-I. -I..\share $(HDF5_I) -DUSE_RSQRT #-DUSE_DRMAC
-NVCCFLAGS=--cl-version $(MSVC_VERSION) -std c++$(STD) -arch sm_$(GPU_ARCH) -restrict -res-usage -Xcompiler /EHsc,/favor:INTEL64,/fp:precise,/GF,/GR,/GS-,/GT,/MD
+NVCCFLAGS=--cl-version $(MSVC_VERSION) -std c++$(STD) -arch sm_$(GPU_ARCH) -restrict -res-usage -Xcompiler /EHsc,/favor:INTEL64,/fp:precise,/GF,/GR,/GS-,/GT,/MD #/MD$(DEBUG)
 NVLDFLAGS=$(HDF5_L) $(HDF5_l)
 
 !IFDEF NDEBUG
 NVPPFLAGS=$(NVPPFLAGS) -DNDEBUG
 NVCCFLAGS=$(NVCCFLAGS) -O$(NDEBUG)
 !ELSE # debug
-NVPPFLAGS=$(NVPPFLAGS) -UNDEBUG
 NVCCFLAGS=$(NVCCFLAGS) -O0 -g -G -src-in-ptx -Xptxas -no-bb-merge,-ret-end
 !ENDIF # NDEBUG
 
