--- a/share/Makefile.LNX
+++ b/share/Makefile.LNX
@@ -7,12 +7,8 @@ NVCC=nvcc
 endif # !NVCC
 
 ifndef GPU_ARCH
-GPU_ARCH=52
+GPU_ARCH=native
 endif # !GPU_ARCH
-
-ifndef STD
-STD=11
-endif # !STD
 
 ifdef NDEBUG
 DEBUG=
@@ -32,15 +28,12 @@ NVPPFLAGS=-I. -I../share $(HDF5_I) -DUSE_RSQRT #-DUSE_DRMAC
 ifndef MARCH
 MARCH=native
 endif # !MARCH
-NVCCFLAGS=-std c++$(STD) -arch sm_$(GPU_ARCH) -restrict -res-usage -Xcompiler -pthread,-march=$(MARCH)
+NVCCFLAGS=-std c++20 -arch $(GPU_ARCH) -restrict -res-usage -Wno-deprecated-gpu-targets -Xcompiler -pthread,-march=$(MARCH)
 NVLDFLAGS=$(HDF5_L) $(HDF5_l)
 
 ifdef NDEBUG
 NVPPFLAGS+=-DNDEBUG
-NVCCFLAGS+=-O$(NDEBUG)
-ifeq ($(STD),17)
-NVCCFLAGS+=--extra-device-vectorization
-endif # ?STD
+NVCCFLAGS+=-O$(NDEBUG) --extra-device-vectorization
 else # debug
 NVCCFLAGS+=-O0 -$(DEBUG) -G -src-in-ptx -Xptxas -no-bb-merge,-ret-end
 endif # NDEBUG
