--- a/share/Makefile.WIN
+++ b/share/Makefile.WIN
@@ -2,21 +2,13 @@
 RM=del /F
 !ENDIF # !RM
 
-!IFNDEF MSVC_VERSION
-MSVC_VERSION=2017
-!ENDIF # !MSVC_VERSION
-
 !IFNDEF NVCC
 NVCC=nvcc.exe
 !ENDIF # !NVCC
 
 !IFNDEF GPU_ARCH
-GPU_ARCH=30
+GPU_ARCH=native
 !ENDIF # !GPU_ARCH
-
-!IFNDEF STD
-STD=11
-!ENDIF # !STD
 
 !IFDEF NDEBUG
 DEBUG=
@@ -33,7 +25,7 @@ HDF5_L=-L$(HDF5)\lib
 HDF5_l=-l libhdf5_hl,libhdf5
 
 NVPPFLAGS=-I. -I..\share $(HDF5_I) -DUSE_RSQRT #-DUSE_DRMAC
-NVCCFLAGS=--cl-version $(MSVC_VERSION) -std c++$(STD) -arch sm_$(GPU_ARCH) -restrict -res-usage -Xcompiler /EHsc,/favor:INTEL64,/fp:precise,/GF,/GR,/GS-,/GT,/MD #/MD$(DEBUG)
+NVCCFLAGS=-std c++20 -arch $(GPU_ARCH) -restrict -res-usage -Wno-deprecated-gpu-targets -Xcompiler /EHsc,/favor:INTEL64,/fp:precise,/GF,/GR,/GS-,/GT,/MD$(DEBUG)
 NVLDFLAGS=$(HDF5_L) $(HDF5_l)
 
 !IFDEF NDEBUG
