--- a/share/Makefile.WIN
+++ b/share/Makefile.WIN
@@ -22,7 +22,7 @@ HDF5=C:\HDF5
 
 HDF5_I=-I$(HDF5)\include
 HDF5_L=-L$(HDF5)\lib
-HDF5_l=-l libhdf5_hl,libhdf5
+HDF5_l=-l hdf5_hl,hdf5
 
 NVPPFLAGS=-I. -I..\share $(HDF5_I) -DUSE_RSQRT #-DUSE_DRMAC
 NVCCFLAGS=-std c++20 -arch $(GPU_ARCH) -restrict -res-usage -Wno-deprecated-gpu-targets -Xcompiler /EHsc,/favor:INTEL64,/fp:precise,/GF,/GR,/GS-,/GT,/MD$(DEBUG)
@@ -50,7 +50,6 @@ HEADERS2=						\
 	..\share\device_code_globals.hpp		\
 	..\share\device_code_common_rotate.hpp		\
 	..\share\device_code_common_scale.hpp		\
-	..\share\device_code_common_Fermi.hpp		\
 	..\share\device_code_common_Kepler.hpp		\
 	..\share\device_code_common_Cholesky.hpp	\
 	..\share\device_code_common_QR.hpp		\
